# lua-blowfish-multimode

./: .busted  .clang-format  .gitignore  .lua-format  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml  test.yml
blowfish8bit/: blowfish-tables.h  blowfish.c  blowfish.h  cli-lib.c  cli-lib.h  decrypt-main.c  encrypt-main.c  lua_blowfish.c
ci/: clean  coverage  test
rockspecs/: blowfish-8bit-0.0-1.rockspec  blowfish-multimode-0.0-1.rockspec
spec/: cbc_spec.lua  cfb_spec.lua  ecb_spec.lua  ofb_spec.lua
src/: blowfish-tables.h  blowfish.c  blowfish.h  cli-lib.c  lua_blowfish.c
tests/: CMakeLists.txt  cbc_tests.c  cfb_tests.c  context_tests.c  ecb_tests.c  ofb_tests.c  test-lib.c  test-lib.h
